# FraudGuard

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  eda.md  pyproject.toml
.dvc/: config
.github/workflows/: ci_cd.yaml
config/: schema.yaml
data/: .gitignore  base.parquet.dvc  churn.csv.dvc
src/components/: data_ingestion.py  data_transformation.py  data_validation.py
src/configuration/: mongo_connection.py
src/constants/: __init__.py
src/data_access/: fraudguard_data.py
src/entity/: artifact_entity.py  config_entity.py
src/logger/: __init__.py
src/utils/: main_utils.py
