[project]
name = "churnguard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "dvc>=3.67.1",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.19",
]
