[project]
name = "fraudguard"
version = "0.1.0"
description = "End-to-end MLOps pipeline for bank account fraud detection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.0",
    "from-root>=1.3.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pandera>=0.32.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "dvc-s3>=3.3.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.19",
]
